// Original file: ../../../p2panda/aquadoggo/aquadoggo/proto/rpc.proto


export interface MetaFilter {
  'documentId'?: (string);
  'viewId'?: (string);
  'owner'?: (string);
  'edited'?: (boolean);
  'deleted'?: (boolean);
  '_documentId'?: "documentId";
  '_viewId'?: "viewId";
  '_owner'?: "owner";
  '_edited'?: "edited";
  '_deleted'?: "deleted";
}

export interface MetaFilter__Output {
  'documentId'?: (string);
  'viewId'?: (string);
  'owner'?: (string);
  'edited'?: (boolean);
  'deleted'?: (boolean);
  '_documentId': "documentId";
  '_viewId': "viewId";
  '_owner': "owner";
  '_edited': "edited";
  '_deleted': "deleted";
}
