// Original file: ../p2panda/aquadoggo/aquadoggo/proto/rpc.proto


export interface NextArgsRequest {
  'publicKey'?: (string);
  'documentViewId'?: (string);
  '_documentViewId'?: "documentViewId";
}

export interface NextArgsRequest__Output {
  'publicKey': (string);
  'documentViewId'?: (string);
  '_documentViewId': "documentViewId";
}
